# beforepaste

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DETECTION_COVERAGE.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  justfile
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  renovate.json  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  missing_pattern.yml
.github/workflows/: ci.yml  cross-platform.yml  desktop-dev.yml  release.yml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  macos-components.css  main.js  styles.css
installers/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
installers/arch/: PKGBUILD
installers/debian/: control  postinst  prerm
installers/macos/: install.sh
installers/systemd/: README.md  beforepaste-update-check.service  beforepaste-update-check.timer
installers/windows/: install.bat
scripts/: release.sh
src/: ai_command.rs  cli.rs  config.rs  lib.rs  main.rs  proc.rs  protected_paste.rs  redact_cli.rs  stats.rs  targets.rs  updater.rs  vscode_surface.rs
src/ai_tui/: mod.rs
src/clipboard/: mod.rs
src/detector/: custom.rs  deep_scan.rs  entropy.rs  mod.rs  patterns.rs  placeholders.rs  presets.rs  redact.rs  validators.rs
src/detector/patterns/: ad_tech.rs  ai.rs  auth_tokens.rs  banking.rs  cloud_aws.rs  cloud_azure.rs  cloud_gcp.rs  cloud_other.rs  crypto_keys.rs  databases.rs  edge.rs  exchanges.rs  extra_ids.rs  gaming.rs  hashes.rs  healthcare.rs  industry_other.rs  infra.rs  iot.rs  legacy.rs  messaging.rs  mobile.rs  monitoring.rs  networking.rs  packages.rs  payments.rs  pii_biometric.rs  pii_contact.rs  pii_financial.rs  pii_geo.rs  pii_govid_eu.rs  pii_govid_intl.rs  pii_govid_us.rs  pii_network.rs  rpc_chain.rs  saas_collab.rs  saas_crm_marketing.rs  saas_hr_finance.rs  saas_iam.rs  structured.rs  (+3 more)
src/detector/wordlists/: mod.rs
src/hotkey/: mod.rs
src/lang/: mod.rs
src/notify/: mod.rs
src/paste_guard/: mod.rs  parser.rs
src/shell_rc/: mod.rs
src/shortcut/: linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: allowlist.rs  categories.rs  chrome.rs  custom_patterns.rs  detection_menu.rs  hotkey_capture.rs  language_select.rs  manage_install.rs  menu.rs  mod.rs  presets.rs  redact_style.rs  star.rs  theme.rs  widgets.rs
src/watch/: mod.rs  target.rs  target_cache.rs  terminal_cleanup.rs  terminal_state.rs
tests/: config_fs.rs  corpus.rs  i18n.rs  paste_guard_parser.rs  proptest_deep_scan.rs  proptest_entropy.rs  redact_cli.rs  stats_jsonl.rs
tests/common/: mod.rs
tests/fixtures/: README.md
tests/fixtures/corpus/: ad_tech.txt  ai.txt  auth_tokens.txt  banking.txt  cloud_aws.txt  cloud_azure.txt  cloud_gcp.txt  cloud_other.txt  crypto_keys.txt  databases.txt  edge.txt  gaming.txt  (+34 more)
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
web/installer/: install.ps1  install.sh
